<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/icon_applybackground"
    tools:context=".View.ApplyActivity">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#a08FD3FD"
        >
        <ImageView
            android:id="@+id/apply_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back"
            />
        <TextView
            android:id="@+id/apply_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="申请"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textColor="#000"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hsapplyer"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/apply_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hsappler_hint"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hsapplyertelephonenumber"
            android:textSize="18sp"
            android:textColor="#000"
            />
        <EditText
            android:id="@+id/apply_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hsphone_hint"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:phoneNumber="true"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hsapplyernumber"
            android:textColor="#000"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/apply_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hspeoplenumber"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:numeric="integer"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hsapplyertime"
            android:textSize="18sp"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/apply_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hstime"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:numeric="integer"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hslooktime"
            android:textSize="18sp"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/apply_looktime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hslookhousetime"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hsextre"
            android:textColor="#000"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/apply_extra"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/hswriterextre"
            android:textColorHint="#a0000000"
            android:textColor="#000"
            android:gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:background="@drawable/applybutton"
        android:id="@+id/apply_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="提交申请"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>


</LinearLayout>
